Update to release versions of malilib and litematica, and reformat Code formatting to IDE defaults.