@@ -1,11 +1,6 @@
 package me.aleksilassila.litematica.printer.guides.placement;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
-import javax.annotation.Nullable;
+import me.aleksilassila.litematica.printer.Printer;
 import me.aleksilassila.litematica.printer.SchematicBlockState;
 import me.aleksilassila.litematica.printer.implementation.PrinterPlacementContext;
 import net.minecraft.block.SlabBlock;
@@ -15,6 +10,12 @@ import net.minecraft.item.ItemStack;
 import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
+
+import javax.annotation.Nullable;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 /**
  * An old school guide where there are defined specific conditions
@@ -78,7 +79,7 @@ public class GeneralPlacementGuide extends PlacementGuide {
             }
         }
 
-        return validSides.isEmpty() ? Optional.empty() : Optional.of(validSides.get(0));
+        return validSides.isEmpty() ? Optional.empty() : Optional.of(validSides.getFirst());
     }
 
     protected boolean getUseShift(SchematicBlockState state) {
@@ -117,7 +118,8 @@ public class GeneralPlacementGuide extends PlacementGuide {
             return new PrinterPlacementContext(player, blockHitResult, requiredItem.get(), requiredSlot,
                     lookDirection.orElse(null), requiresShift);
         } catch (Exception e) {
-            e.printStackTrace();
+            Printer.logger.error("getPlacementContext(): Exception caught: {}", e.getMessage());
+            //e.printStackTrace();
             return null;
         }
     }
